--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    
+    <header class="header">
+
+    </header>
+    <nav class="navbar">
+
+    </nav>
+    <section class="carousel">
+
+    </section>
+    <section class="advertisement">
+
+    </section>
+    <section class="products">
+
+    </section>
+    <section class="banner">
+
+    </section>
+    <section class="arrivals">
+
+    </section>
+    <section class="trends">
+
+    </section>
+    <footer class="footer">
+
+    </footer>
 </body>
 </html>
