--- a/index.html
+++ b/index.html
@@ -5,14 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>NewShop Layout</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
     <header class="header">
-
+        <div class="header__content">
+                <div class="header__left">
+                        <p>Help : 0163465456454</p>
+                    </div>
+                    <div class="header__right">
+                        <ul>
+                            <li><a href="#">Checkout</a></li>
+                            <li><a href="#">Login</a></li>
+                            <li><a href="#">Account</a></li>
+                        </ul>
+                    </div>
+        </div>
+       
     </header>
     <nav class="navbar">
-
+        <div class="navbar__content">
+                <h1 class="navbar__h1">NEW SHOP</h1>
+                <div class="navbar__menu">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Women</a></li>
+                        <li><a href="#">Man</a></li>
+                        <li><a href="#">Short Code</a></li>
+                        <li><a href="#">Mail US</a></li>
+                    </ul>
+                </div>
+                <div class="cart">
+                    <p>$0.00 (0 Items) <i class="fa fa-shopping-cart"></i></p>
+                    <p>Empty Cart</p>
+                </div>
+        </div>
+       
     </nav>
     <section class="carousel">
 
