--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
        
     </nav>
     <section class="carousel">
-
+        <img src="./img/b1.jpg" alt="hinh 1">
     </section>
     <section class="advertisement">
 
