--- a/index.html
+++ b/index.html
@@ -49,7 +49,23 @@
         <img src="./img/b1.jpg" alt="hinh 1">
     </section>
     <section class="advertisement">
-       
+        <div class="advertisement__content">
+                <div class="advertisement__left">
+                        <img src="./img/p1.jpg" alt="">
+                   </div>
+                   <div class="advertisement__right">
+                        <div class="advertisement__items advertisement__img2">
+                                <img src="./img/p2.jpg" alt="">
+                        </div>
+                        <div class="advertisement__items">
+                                <img src="./img/p3.jpg" alt="">
+                        </div>
+                        <div class="advertisement__items">
+                                <img src="./img/p4.jpg" alt="">
+                        </div>
+                   </div>
+        </div>
+      
     </section>
     <section class="products">
             <h2>NEW PRODUCTS</h2>
