Complete banner and fix height .products__items

--- a/index.html
+++ b/index.html
@@ -50,65 +50,72 @@
     </section>
     <section class="advertisement">
         <div class="advertisement__content">
-                <div class="advertisement__left">
-                        <img src="./img/p1.jpg" alt="">
-                   </div>
-                   <div class="advertisement__right">
-                        <div class="advertisement__items advertisement__img2">
-                                <img src="./img/p2.jpg" alt="">
-                        </div>
-                        <div class="advertisement__items">
-                                <img src="./img/p3.jpg" alt="">
-                        </div>
-                        <div class="advertisement__items">
-                                <img src="./img/p4.jpg" alt="">
-                        </div>
-                   </div>
-        </div>
-      
-    </section>
-    <section class="products">
-            <h2>NEW PRODUCTS</h2>
-            <div class="products__content">
-                <div class="products__items">
-                    <img src="./img/p13.jpg" alt="">
-                    <p>My product is the best</p>
-                    <p>XL/XXL/S</p>
-                    <p><strike>$100</strike>&nbsp; $70</p>
-                    <button clproducts_btn">
-                        Add to Cart
-                    </button>
+            <div class="advertisement__left">
+                <img src="./img/p1.jpg" alt="">
+            </div>
+            <div class="advertisement__right">
+                <div class="advertisement__items advertisement__img2">
+                    <img src="./img/p2.jpg" alt="">
                 </div>
-                <div class="products__items">
-                    <img src="./img/p22.jpg" alt="">
-                    <p>My product is the best</p>
-                    <p>XL/XXL/S</p>
-                    <p><strike>$100</strike>$70</p>
-                    <button class="products_btn">
-                        Add to Cart
-                    </button>
+                <div class="advertisement__items">
+                    <img src="./img/p3.jpg" alt="">
                 </div>
-                <div class="products__items">
-                    <img src="./img/p9.jpg" alt="">
-                    <p>My product is the best</p>
-                    <p>XL/XXL/S</p>
-                    <p><strike>$100</strike>$70</p>
-                    <button class="products_btn">
-                        Add to Cart
-                    </button>
-                </div>
-                <div class="products__items">
-                    <img src="./img/p16.jpg" alt="">
-                    <p>My product is the best</p>
-                    <p>XL/XXL/S</p>
-                    <p><strike>$100</strike>$70</p>
-                    <button class="products_btn">
-                        Add to Cart
-                    </button>
+                <div class="advertisement__items">
+                    <img src="./img/p4.jpg" alt="">
                 </div>
             </div>
+        </div>
+
+    </section>
+    <section class="products">
+        <h2>NEW PRODUCTS</h2>
+        <div class="products__content">
+            <div class="products__items">
+                <img src="./img/p13.jpg" alt="">
+                <p>My product is the best</p>
+                <p>XL/XXL/S</p>
+                <p><strike>$100</strike>&nbsp; $70</p>
+                <button clproducts_btn">
+                    Add to Cart
+                </button>
+            </div>
+            <div class="products__items">
+                <img src="./img/p22.jpg" alt="">
+                <p>My product is the best</p>
+                <p>XL/XXL/S</p>
+                <p><strike>$100</strike>$70</p>
+                <button class="products_btn">
+                    Add to Cart
+                </button>
+            </div>
+            <div class="products__items">
+                <img src="./img/p9.jpg" alt="">
+                <p>My product is the best</p>
+                <p>XL/XXL/S</p>
+                <p><strike>$100</strike>$70</p>
+                <button class="products_btn">
+                    Add to Cart
+                </button>
+            </div>
+            <div class="products__items">
+                <img src="./img/p16.jpg" alt="">
+                <p>My product is the best</p>
+                <p>XL/XXL/S</p>
+                <p><strike>$100</strike>$70</p>
+                <button class="products_btn">
+                    Add to Cart
+                </button>
+            </div>
+        </div>
     </section>
     <section class="banner">
+        <div class="banner__content">
+            <span class="banner__line"></span>
+            <p class="banner__p1">20% Discount on</p>
+            <p class="banner__p2">TRENDING DESIGN </p>
+            <button>Show now</button>
+            <button>Quick View</button>
+        </div>
 
     </section>
     <section class="arrivals">
