--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <p>My product is the best</p>
                 <p>XL/XXL/S</p>
                 <p><strike>$100</strike>&nbsp; $70</p>
-                <button clproducts_btn">
+                <button class="products_btn">
                     Add to Cart
                 </button>
             </div>
@@ -119,7 +119,45 @@
 
     </section>
     <section class="arrivals">
-
+        <h2>NEW ARRIVALS</h2>
+        <div class="arrivals__content">
+            <div class="arrivals__items">
+                <img src="./img/p10.jpg" alt="">
+                <p>My product is the best</p>
+                <p>XL/XXL/S</p>
+                <p><strike>$100</strike>&nbsp; $70</p>
+                <button class="arrivals_btn">
+                    Add to Cart
+                </button>
+            </div>
+            <div class="arrivals__items">
+                <img src="./img/p12.jpg" alt="">
+                <p>My product is the best</p>
+                <p>XL/XXL/S</p>
+                <p><strike>$100</strike>$70</p>
+                <button class="arrivals_btn">
+                    Add to Cart
+                </button>
+            </div>
+            <div class="arrivals__items">
+                <img src="./img/p20.jpg" alt="">
+                <p>My product is the best</p>
+                <p>XL/XXL/S</p>
+                <p><strike>$100</strike>$70</p>
+                <button class="arrivals_btn">
+                    Add to Cart
+                </button>
+            </div>
+            <div class="arrivals__items">
+                <img src="./img/p15.jpg" alt="">
+                <p>My product is the best</p>
+                <p>XL/XXL/S</p>
+                <p><strike>$100</strike>$70</p>
+                <button class="arrivals_btn">
+                    Add to Cart
+                </button>
+            </div>
+        </div>
     </section>
     <section class="trends">
 
