create line in tag h2 trends

--- a/index.html
+++ b/index.html
@@ -160,7 +160,64 @@
         </div>
     </section>
     <section class="trends">
-
+        <h2>Latest Fashion Trends</h2>
+        <span class="trends__line"></span>
+        <div class="trends__content">
+            <div class="trends__items">
+                <div class="trends__circle">
+                    <p class="trends__p1">50%</p>
+                </div>
+                <img src="./img/l1.jpg" alt="">
+                <div class="trends__bg">
+                    <p class="trends__p2">Men</p>
+                </div>
+            </div>
+            <div class="trends__items">
+                <div class="trends__circle">
+                    <p class="trends__p1">50%</p>
+                </div>
+                <img src="./img/l2.jpg" alt="">
+                <div class="trends__bg">
+                    <p class="trends__p2">Men</p>
+                </div>
+            </div>
+            <div class="trends__items">
+                <div class="trends__circle">
+                    <p class="trends__p1">50%</p>
+                </div>
+                <img src="./img/l3.jpg" alt="">
+                <div class="trends__bg">
+                    <p class="trends__p2">Men</p>
+                </div>
+            </div>
+            <div class="trends__items">
+                <div class="trends__circle">
+                    <p class="trends__p1">50%</p>
+                </div>
+                <img src="./img/l4.jpg" alt="">
+                <div class="trends__bg">
+                    <p class="trends__p2">Men</p>
+                </div>
+            </div>
+            <div class="trends__items">
+                <div class="trends__circle">
+                    <p class="trends__p1">50%</p>
+                </div>
+                <img src="./img/l5.jpg" alt="">
+                <div class="trends__bg">
+                    <p class="trends__p2">Men</p>
+                </div>
+            </div>
+            <div class="trends__items">
+                <div class="trends__circle">
+                    <p class="trends__p1">50%</p>
+                </div>
+                <img src="./img/l6.jpg" alt="">
+                <div class="trends__bg">
+                    <p class="trends__p2">Men</p>
+                </div>
+            </div>
+        </div>
     </section>
     <footer class="footer">
 
