--- a/index.html
+++ b/index.html
@@ -116,7 +116,6 @@
             <button>Show now</button>
             <button>Quick View</button>
         </div>
-
     </section>
     <section class="arrivals">
         <h2>NEW ARRIVALS</h2>
@@ -220,7 +219,53 @@
         </div>
     </section>
     <footer class="footer">
+        <div class="footer__content">
+            <div class="footer__list">
+                <div class="footer__p">
+                    <h2>About Us</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat rerum illo harum rem sit pariatur vel repudiandae voluptatem numquam qui?
+                    </p>
+                </div>
+                <div class="footer__account">
+                    <h2>My Account</h2>
+                    <ul>
+                        <li class="footer__items"><a href="#">Check out</a></li>
+                        <li class="footer__items"><a href="#">Login</a></li>
+                        <li class="footer__items"><a href="#">Create Account</a></li>
+                    </ul>
+                </div>
+                <div class="footer__info">
+                    <h2>Information</h2>
+                    <ul>
+                        <li class="footer__items"><a href="#">Home</a></li>
+                        <li class="footer__items"><a href="#">Products</a></li>
+                        <li class="footer__items"><a href="#">Short Codes</a></li>
+                        <li class="footer__items"><a href="#">Mail us</a></li>
+                    </ul>
+                </div>
+                <div class="footer__contact">
+                    <h2>Contact</h2>
+                    <ul>
+                        <li class="footer__items">
+                            <p><i class="fa fa-map-marker"></i>296 Võ Thành Trang</p>
+                        </li>
+                        <li class="footer__items">
+                            <p><i class="fa fa-phone"></i>01616161616</p>
+                        </li>
+                        <li class="footer__items">
+                            <p><i class="fa fa-envelope"></i>abc@gmail.com</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer__copyright">
+                <div class="footer__copy">
+                    <p>&copy;Copyright.NewShop</p>
+                    <img src="./img/card.png" alt="card">
+                </div>
 
+            </div>
+        </div>
     </footer>
 </body>
 
